--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.8"
+  },
+  "dependencies": {
+    "@nuxt/image-edge": "^1.0.0-27657146.da85542"
   }
 }
