--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.8"
+    "autoprefixer": "^10.4.8",
+    "nuxt": "3.0.0-rc.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
-    "@nuxt/image-edge": "^1.0.0-27657146.da85542"
+    "@nuxt/image-edge": "^1.0.0-27657146.da85542",
+    "@nuxtjs/tailwindcss": "^5.3.2"
   }
 }
