--- a/package.json
+++ b/package.json
@@ -4,15 +4,29 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "lint": "eslint . --ext .ts,.vue",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,vue,ts}": [
+      "yarn lint"
+    ]
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^9.0.0",
     "autoprefixer": "^10.4.8",
-    "nuxt": "3.0.0-rc.8",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.4.1",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
-  },
-  "dependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "tailwindcss": "^3.1.8",
+    "nuxt": "3.0.0-rc.8",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "@nuxt/image-edge": "^1.0.0-27657146.da85542",
     "@nuxtjs/tailwindcss": "^5.3.2"
   }
